# data_master_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  matched_results.xlsx  pyproject.toml  requirements.txt
app/: main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  processing.py  test.py
app/core/: constants.py  logging.py  security.py  settings.py
app/data/: export_test_data.xlsx
app/services/: __init__.py  get_file_or_404.py  matchproducts.py  read_excel_f.py  remove_folder.py
